# trading_212_desk

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  demo.py  driver_demo.py  html_demo.py  qtquickcontrols2.conf  resources.qrc  scraper.py  start_ui.py
legacy/: Pipfile  driver_demo.py  html_demo.py  start_ui.py
legacy/models/: html_portfolio.py  portfolio.py  stock.py
legacy/ui/: main_window.qml
legacy/util/: currency.py  dns_over_https.py  drivers.py
models/: driver_portfolio.py  html_portfolio.py  portfolio.py  stock.py
qml/: MainWindow.qml  main_window.qml
qml/components/: MainStockPanel.qml
qml/windows/: LoginWindow.qml  login_window.qml
scraper/: scraper.py
src/: main.cpp
src/models/: api_models.h
src/network/: dns_entry.cpp  dns_entry.h  dns_over_https.cpp  dns_over_https.h  net_request.cpp  net_request.h
src/views/: login_vew.cpp  login_view.h  main_view.cpp  main_view.h
ui/: main_window.qml
util/: drivers.py
